tests/golden/type_errors/nullable_to_nonnullable_assignment.cd
let maybe: number? = 1;
let x: number = maybe;
